MyProject/force-app/main/default/objects/Teacher__c/fields/Agree__c.field-meta.xml
<CustomField>
    <fullName>Agree__c</fullName>
    <formula>IF( ISPICKVAL( Gender__c , &apos;female&apos;) ,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agree</label>
    <type>Checkbox</type>
</CustomField>