MyProject/force-app/main/default/objects/Teacher__c/fields/Application_number__c.field-meta.xml
<CustomField>
    <fullName>Application_number__c</fullName>
    <displayFormat>REQ-{000}</displayFormat>
    <label>Application Number</label>
    <type>AutoNumber</type>
</CustomField>