MyProject/force-app/main/default/objects/Teacher__c/fields/Appliy_For__c.field-meta.xml
<CustomField>
    <fullName>Appliy_For__c</fullName>
    <label>Appliy For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BE IT</fullName>
            </value>
            <value>
                <fullName>BE Mech</fullName>
            </value>
            <value>
                <fullName>BSc</fullName>
            </value>
            <value>
                <fullName>BSA</fullName>
            </value>
            <value>
                <fullName>BBA CA</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BE Civil</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>