MyProject/force-app/main/default/objects/Teacher__c/fields/Bike__c.field-meta.xml
<CustomField>
    <fullName>Bike__c</fullName>
    <label>Bike</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Gender__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MT15</fullName>
            </value>
            <value>
                <fullName>R15</fullName>
            </value>
            <value>
                <fullName>Unicorn</fullName>
            </value>
            <value>
                <fullName>Jupiter</fullName>
            </value>
            <value>
                <fullName>Activa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>