MyProject/force-app/main/default/objects/Teacher__c/fields/CET_Mark_s__c.field-meta.xml
<CustomField>
    <fullName>CET_Mark_s__c</fullName>
    <label>CET Mark&apos;s</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>