MyProject/force-app/main/default/objects/Teacher__c/fields/Collage__c.field-meta.xml
<CustomField>
    <fullName>Collage__c</fullName>
    <label>Collage</label>
    <referenceTo>Collage__c</referenceTo>
    <relationshipLabel>Teachers</relationshipLabel>
    <relationshipName>Teachers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>