MyProject/force-app/main/default/objects/Teacher__c/fields/Collage_Name__c.field-meta.xml
<CustomField>
    <fullName>Collage_Name__c</fullName>
    <label>Collage Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>