MyProject/force-app/main/default/objects/Teacher__c/fields/Current_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Time__c</fullName>
    <label>Current Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>