MyProject/force-app/main/default/objects/Teacher__c/fields/Qulification__c.field-meta.xml
<CustomField>
    <fullName>Qulification__c</fullName>
    <label>Qulification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSC</fullName>
            </value>
            <value>
                <fullName>HSC</fullName>
            </value>
            <value>
                <fullName>Degree</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>Mister&apos;s</fullName>
            </value>
            <value>
                <fullName>PHD Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>