MyProject/force-app/main/default/objects/Teacher__c/fields/Total_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_Salary__c</fullName>
    <formula>IF(
  OR(
    ISBLANK( Collage__c ),
	AND(
	    NOT(ISBLANK(Collage__c)),
		ISBLANK(TEXT(Collage__r.Grant_Status__c))
	  ),
   AND(
        NOT(ISBLANK(Collage__c)),
        NOT(ISBLANK(TEXT(Collage__r.Grant_Status__c))),
        NOT(ISPICKVAL(Collage__r.Grant_Status__c,&apos;Granted&apos;))
	)
   ),
 Salary__c  + GST__c,
Salary__c+0	
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>