MyProject/force-app/main/default/objects/Teacher__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application_number__c</columns>
    <columns>CET_Mark_s__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Email_id__c</columns>
    <columns>Gender__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Mobile_no__c</columns>
    <columns>Qulification__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>